# video-rag

./: .env.example  .gitignore  README.md  pyproject.toml  start.sh  system_setup.sh
api/: main.py
api/routers/: video.py
docker/: .env.example  docker-compose.yaml  loki-config.yml
web/: front.py
